--- a/src/main/resources/informe-LaTex/QSim_Molinari_Rosito.tex
+++ b/src/main/resources/informe-LaTex/QSim_Molinari_Rosito.tex
@@ -18,6 +18,9 @@
 \input{simulador}
 \input{evaluacion-desarrollo}
 
+\appendix
+\input{arquitecturasQ}
+
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
