--- a/src/main/resources/informe-LaTex/evaluacion-desarrollo.tex
+++ b/src/main/resources/informe-LaTex/evaluacion-desarrollo.tex
@@ -23,7 +23,7 @@ Tuvieron que ser solicitadas además extensiones al equipo de desarrolladores de
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%55
 \section{Casos de prueba}
 
-\item \textbf{Descripcion de cada Caso de Prueba}
+\textbf{Descripción de cada Caso de Prueba}
 
 \subsection{Chequeo de sintaxis en la distintas Qi}
 
@@ -105,12 +105,9 @@ En esta instancia sabemos que  dicho operando tiene el valor guardado, a este va
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%55
 \section{Ejemplos de uso}
-<<<<<<< HEAD
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Trabajo Futuro}
 
 \ojo{Incorporar push y pop/ mejorar el editor de programas Qi/Entrada y salida: modelar dispositivos como el teclado, etc}{}
-=======
->>>>>>> d1dad07a272b016488f909e7459ca848c53f3344
